Fixed post visibility

--- a/Web_Dev/public/css/styles.css
+++ b/Web_Dev/public/css/styles.css
@@ -47,6 +47,9 @@ header {
 .table {
   color: white
 }
+.post-text{
+  color: white
+}
 /* edit by em stops here */
 .content {
   max-width: 55%;
